--- a/responsiveNav/style.css
+++ b/responsiveNav/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+body
+{
+    height:200vh;
+}
 
 nav {
     height: 70px;
@@ -93,4 +97,10 @@ ul a {
         display: none;
     }
 
+}
+.active
+{
+    background-color: rgb(148, 100, 100);
+    color:#000 !important;
+    padding:5px 5px;
 }
